--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
     "@popperjs/core": "^2.11.2",
+    "@prisma/client": "^4.12.0",
     "apexcharts-clevision": "3.28.5",
     "babel-eslint": "^10.1.0",
     "clsx": "^1.1.1",
@@ -73,6 +74,7 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "next-transpile-modules": "^9.0.0",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "prisma": "^4.12.0"
   }
 }
