--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:XrJRTDSAFFUft5R5S2OU@containers-us-west-169.railway.app:5744/railway"
+DATABASE_URL="postgresql://postgres:Hk3DAyX1WYTS3my0blgP@containers-us-west-1.railway.app:6016/railway"
