--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-popper": "^2.2.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.0.4",
     "eslint-config-prettier": "^8.3.0",
@@ -75,7 +76,9 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "next-transpile-modules": "^9.0.0",
+    "postcss": "^8.4.21",
     "prettier": "2.5.1",
-    "prisma": "^4.12.0"
+    "prisma": "^4.12.0",
+    "tailwindcss": "^3.3.1"
   }
 }
