--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "clsx": "^1.1.1",
     "csvtojson": "^2.0.10",
     "eslint-plugin-react": "^7.29.4",
+    "mapbox-gl": "^2.14.1",
     "mdi-material-ui": "^7.1.0",
     "next": "12.0.4",
     "nprogress": "^0.2.0",
