--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@prisma/client": "^4.12.0",
     "apexcharts-clevision": "3.28.5",
     "babel-eslint": "^10.1.0",
+    "chart.js": "^4.3.0",
     "clsx": "^1.1.1",
     "csvtojson": "^2.0.10",
     "eslint-plugin-react": "^7.29.4",
@@ -64,6 +65,7 @@
     "papaparse": "^5.4.1",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.5.0",
     "react-dom": "17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
