--- a/package.json
+++ b/package.json
@@ -55,11 +55,13 @@
     "apexcharts-clevision": "3.28.5",
     "babel-eslint": "^10.1.0",
     "chart.js": "^4.3.0",
+    "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^1.1.1",
     "csvtojson": "^2.0.10",
     "eslint-plugin-react": "^7.29.4",
     "mapbox-gl": "^2.14.1",
     "mdi-material-ui": "^7.1.0",
+    "moment": "^2.29.4",
     "next": "12.0.4",
     "nprogress": "^0.2.0",
     "papaparse": "^5.4.1",
