--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "react-dom": "17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.2.5",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
