--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^1.1.1",
     "csvtojson": "^2.0.10",
+    "date-fns": "^2.30.0",
     "eslint-plugin-react": "^7.29.4",
     "mapbox-gl": "^2.14.1",
     "mdi-material-ui": "^7.1.0",
