--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://postgres:Hk3DAyX1WYTS3my0blgP@containers-us-west-1.railway.app:6016/railway"
+DATABASE_URL="postgresql://postgres:TiJAhuKmE7jbWGLgnlod@containers-us-west-42.railway.app:6731/railway"
