addesd aws sdk upload to bucket

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 DATABASE_URL="postgresql://postgres:TiJAhuKmE7jbWGLgnlod@containers-us-west-42.railway.app:6731/railway"
+NEXT_PUBLIC_S3_BUCKET="kola-ingestion-prod"
+NEXT_PUBLIC_S3_REGION="us-east-2"
+NEXT_PUBLIC_ACCESS_KEY="AKIASY42LZGOFQT6RK4O"
+NEXT_PUBLIC_SECRET_ACCESS_KEY="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"
