--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@popperjs/core": "^2.11.2",
     "@prisma/client": "^4.12.0",
     "apexcharts-clevision": "3.28.5",
+    "aws-sdk": "^2.1390.0",
     "babel-eslint": "^10.1.0",
     "chart.js": "^4.3.0",
     "chartjs-adapter-moment": "^1.0.1",
@@ -61,6 +62,7 @@
     "date-fns": "^2.30.0",
     "eslint-plugin-react": "^7.29.4",
     "mapbox-gl": "^2.14.1",
+    "material-ui-dropzone": "^3.5.0",
     "mdi-material-ui": "^7.1.0",
     "moment": "^2.29.4",
     "next": "12.0.4",
