--- a/package.json
+++ b/package.json
@@ -73,9 +73,9 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.5.0",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.4.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.2.5",
-    "react-toastify": "^9.1.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
